# kthread

./: CMakeLists.txt  KthreadConfig.cmake  README.md
examples/: CMakeLists.txt  benchmarks.cc  channels.cc  processor.cc  threadpool.cc  threadpool_except.cc
lib/: CMakeLists.txt  threadpool.cc
lib/include/: channel.hh  processor.hh  queue.hh  test_processor.hh  threadpool.hh
test/: CMakeLists.txt  channel.cc  processor.cc  queue.cc  test_processor.cc  threadpool.cc
